--- a/core-bc/modules/portlet/src/main/webapp/views/faktura/view.xhtml
+++ b/core-bc/modules/portlet/src/main/webapp/views/faktura/view.xhtml
@@ -28,7 +28,7 @@
 					<div class="field-row field-row-2">
 						<div class="field-element inline">
 							<h:outputLabel for="voucherNumber" value="Verifikationsnr:" />
-							<h:inputText id="voucherNumber" pt:placeholder="Skriv in verifikationsnr..."  />
+							<h:inputText id="voucherNumber" pt:placeholder="Skriv in verifikationsnr..." pt:autofocus="true" />
 						</div>
 
 						<div class="field-element inline">
