--- a/core-bc/modules/portlet/src/main/webapp/views/faktura/add_grant.xhtml
+++ b/core-bc/modules/portlet/src/main/webapp/views/faktura/add_grant.xhtml
@@ -15,8 +15,6 @@
 	<h:head />
 	<h:body>
 
-		<portlet:namespace var="portletNamespace" />
-
 		<script>
 			if(typeof gbJs == 'undefined') {
 			  gbJs = {};
@@ -33,22 +31,61 @@
 
 			<div class="span6">
 
-				<div class="tabs gb-tabs" data-activetab="0">
-					<ul>
-						<li><a href="##{portletNamespace}tabs1">Personnummer</a></li>
-						<li><a href="##{portletNamespace}tabs2">LMA-nummer</a></li>
-						<li><a href="##{portletNamespace}tabs3">Oregistrerade</a></li>
-					</ul>
-					<div id="#{portletNamespace}tabs1">
-						<ui:include src="add_grant_form_personnumber.xhtml"/>
+				<h:form id="addGrantForm" pt:data-focus_="true">
+
+					<div class="gb-tabs">
+						<ul class="tabs-list">
+							<li class="#{registerGrantBackingBean.tabIndexActive == 0 ? 'active' : ''}">
+								<ui:fragment rendered="#{registerGrantBackingBean.tabIndexActive != 0}">
+									<h:commandLink styleClass="tab" value="Personnummer">
+										<f:ajax listener="#{registerGrantBackingBean.tabsListener(0)}" render=":addGrantForm" />
+									</h:commandLink>
+								</ui:fragment>
+								<ui:fragment rendered="#{registerGrantBackingBean.tabIndexActive == 0}">
+									<span class="tab" >Personnummer</span>
+								</ui:fragment>
+							</li>
+							<li class="#{registerGrantBackingBean.tabIndexActive == 1 ? 'active' : ''}">
+								<ui:fragment rendered="#{registerGrantBackingBean.tabIndexActive != 1}">
+									<h:commandLink styleClass="tab" value="LMA-nummer">
+										<f:ajax listener="#{registerGrantBackingBean.tabsListener(1)}" render=":addGrantForm" />
+									</h:commandLink>
+								</ui:fragment>
+								<ui:fragment rendered="#{registerGrantBackingBean.tabIndexActive == 1}">
+									<span class="tab" >LMA-nummer</span>
+								</ui:fragment>
+							</li>
+							<li class="#{registerGrantBackingBean.tabIndexActive == 2 ? 'active' : ''}">
+								<ui:fragment rendered="#{registerGrantBackingBean.tabIndexActive != 2}">
+									<h:commandLink styleClass="tab" value="Oregistrerade">
+										<f:ajax listener="#{registerGrantBackingBean.tabsListener(2)}" render=":addGrantForm" />
+									</h:commandLink>
+								</ui:fragment>
+								<ui:fragment rendered="#{registerGrantBackingBean.tabIndexActive == 2}">
+									<span class="tab" >Oregistrerade</span>
+								</ui:fragment>
+							</li>
+						</ul>
+
+						<div class="tabs-content">
+
+							<ui:fragment rendered="#{registerGrantBackingBean.tabIndexActive == 0}">
+								<ui:include src="add_grant_personnumber.xhtml" />
+							</ui:fragment>
+
+							<ui:fragment rendered="#{registerGrantBackingBean.tabIndexActive == 1}">
+								<ui:include src="add_grant_lmanumber.xhtml" />
+							</ui:fragment>
+
+							<ui:fragment rendered="#{registerGrantBackingBean.tabIndexActive == 2}">
+								<ui:include src="add_grant_unregistered.xhtml" />
+							</ui:fragment>
+
+						</div>
+
 					</div>
-					<div id="#{portletNamespace}tabs2">
-						<ui:include src="add_grant_form_lmanumber.xhtml"/>
-					</div>
-					<div id="#{portletNamespace}tabs3">
-						<ui:include src="add_grant_form_unregistered.xhtml"/>
-					</div>
-				</div>
+				</h:form>
+
 
 			</div>
 
