--- a/core-bc/modules/portlet/src/main/webapp/views/faktura/view.xhtml
+++ b/core-bc/modules/portlet/src/main/webapp/views/faktura/view.xhtml
@@ -5,7 +5,6 @@
 		xmlns:c="http://java.sun.com/jsp/jstl/core"
 		xmlns:f="http://java.sun.com/jsf/core"
 		xmlns:h="http://java.sun.com/jsf/html"
-		xmlns:p="http://primefaces.org/ui"
 		xmlns:ui="http://java.sun.com/jsf/facelets"
 		xmlns:bridge="http://liferay.com/faces/bridge"
 		xmlns:portlet="http://java.sun.com/portlet_2_0"
@@ -25,47 +24,51 @@
 
 				<h:form id="form" pt:data-focus="true">
 
-					<div class="field-row field-row-2">
-						<div class="field-element inline">
-							<h:outputLabel for="voucherNumber" value="Verifikationsnr:" />
-							<h:inputText id="voucherNumber" pt:placeholder="Skriv in verifikationsnr..." pt:autofocus="true" />
+					<div class="box">
+
+						<div class="field-row field-row-2">
+							<div class="field-element inline">
+								<h:outputLabel for="voucherNumber" value="Verifikationsnr:" />
+								<h:inputText id="voucherNumber" pt:placeholder="Skriv in verifikationsnr..." pt:autofocus="true" />
+							</div>
+
+							<div class="field-element inline">
+								<h:outputLabel for="supplier" value="Leverantör:" />
+
+								<select id="supplier" name="supplier" class="js-select-replace" data-placeholder="Väj leverantör">
+									<option value="-1"></option>
+									<option value="0">Synsam Alfa</option>
+									<option value="1">Synsam Beta</option>
+									<option value="3">Synsam Gamma</option>
+									<option value="4">Synsam Delta</option>
+									<option value="5">Specsavers Alfa</option>
+									<option value="6">Specsavers Beta</option>
+									<option value="7">Specsavers Gamma</option>
+									<option value="8">Specsavers Delta</option>
+									<option value="9">Wasaoptik</option>
+									<option value="10">Direktoptik</option>
+									<option value="11">Hendéns</option>
+								</select>
+							</div>
 						</div>
 
-						<div class="field-element inline">
-							<h:outputLabel for="supplier" value="Leverantör:" />
+						<div class="field-row field-row-2">
+							<div class="field-element inline">
+								<h:outputLabel for="invoiceNumber" value="Fakturanr:" />
+								<h:inputText id="invoiceNumber" pt:placeholder="Fakturanr eller meddelande..."  />
+							</div>
 
-							<select id="supplier" name="supplier" class="" data-placeholder="Väj leverantör" data-selectreplace="true">
-								<option value="-1"></option>
-								<option value="0">Synsam Alfa</option>
-								<option value="1">Synsam Beta</option>
-								<option value="3">Synsam Gamma</option>
-								<option value="4">Synsam Delta</option>
-								<option value="5">Specsavers Alfa</option>
-								<option value="6">Specsavers Beta</option>
-								<option value="7">Specsavers Gamma</option>
-								<option value="8">Specsavers Delta</option>
-								<option value="9">Wasaoptik</option>
-								<option value="10">Direktoptik</option>
-								<option value="11">Hendéns</option>
-							</select>
-						</div>
-					</div>
-
-					<div class="field-row field-row-2">
-						<div class="field-element inline">
-							<h:outputLabel for="invoiceNumber" value="Fakturanr:" />
-							<h:inputText id="invoiceNumber" pt:placeholder="Fakturanr eller meddelande..."  />
+							<div class="field-element inline">
+								<h:outputLabel for="invoiceAmountIncludingVAT" value="Belopp inkl moms:" />
+								<h:inputText id="invoiceAmountIncludingVAT" pt:placeholder="Fakturabelopp inkl moms"  />
+							</div>
 						</div>
 
-						<div class="field-element inline">
-							<h:outputLabel for="invoiceAmountIncludingVAT" value="Belopp inkl moms:" />
-							<h:inputText id="invoiceAmountIncludingVAT" pt:placeholder="Fakturabelopp inkl moms"  />
+						<div class="button-row">
+							<h:commandButton id="submitButton" value="Registrera faktura" styleClass="primary" action="#{registerInvoiceBackingBean.submitInvoiceRegistration}" />
+							<h:commandButton id="cancelButton" value="Avbryt" styleClass="cancel" action="#{registerInvoiceBackingBean.cancelInvoiceRegistration}" />
 						</div>
-					</div>
 
-					<div class="button-row">
-						<h:commandButton id="submitButton" value="Registrera faktura" styleClass="primary" action="#{registerInvoiceBackingBean.submitInvoiceRegistration}" />
-						<h:commandButton id="cancelButton" value="Avbryt" styleClass="cancel" action="#{registerInvoiceBackingBean.cancelInvoiceRegistration}" />
 					</div>
 
 
