Added markup for other (prescription) input.

--- a/core-bc/modules/portlet/src/main/webapp/views/faktura/view.xhtml
+++ b/core-bc/modules/portlet/src/main/webapp/views/faktura/view.xhtml
@@ -14,6 +14,10 @@
 	<h:head />
 	<h:body>
 
+		<c:set var="hasAfaki" value="false" scope="request" />
+		<c:set var="hasKeratonus" value="false" scope="request" />
+		<c:set var="hasSpecial" value="true" scope="request" />
+
 		<div class="row-fluid">
 
 			<div class="span3">
@@ -21,6 +25,137 @@
 			</div>
 
 			<div class="span6">
+
+
+				<div class="box">
+					<h:form id="form2">
+
+						<div class="grant-section">
+							<div class="field-row">
+
+								<div class="prescription-section">
+									<div class="prescription-section-main">
+										<div class="field-element field-element-toggle">
+											<h:selectBooleanCheckbox id="afaki" value="#{hasAfaki}" />
+											<h:outputLabel for="afaki" value="Afaki:" />
+										</div>
+									</div>
+									<div class="prescription-section-fields">
+										<ui:fragment rendered="#{hasAfaki}">
+											<div class="prescription-section-fieldset">
+												<div class="prescription-section-field">
+													<h:selectBooleanCheckbox id="afakiEyeSightBilateral" value="false" />
+													<h:outputLabel for="afakiEyeSightBilateral" value="Bilat." />
+												</div>
+												<div class="prescription-section-field">
+													<h:selectBooleanCheckbox id="afakiEyeSightRight" value="false" />
+													<h:outputLabel for="afakiEyeSightRight" value="Hö" />
+												</div>
+												<div class="prescription-section-field">
+													<h:selectBooleanCheckbox id="afakiEyeSightLeft" value="false" />
+													<h:outputLabel for="afakiEyeSightLeft" value="Vä" />
+												</div>
+											</div>
+										</ui:fragment>
+									</div>
+								</div>
+
+								<div class="prescription-section">
+									<div class="prescription-section-main">
+										<div class="field-element field-element-toggle">
+											<h:selectBooleanCheckbox id="keratokonus" value="#{hasKeratonus}" />
+											<h:outputLabel for="keratokonus" value="Keratokonus:" />
+										</div>
+									</div>
+									<div class="prescription-section-fields">
+										<ui:fragment rendered="#{hasKeratonus}">
+
+											<div class="prescription-section-fieldset">
+												<div class="prescription-section-field">
+													<h:selectBooleanCheckbox id="keratokonusEyeSightBilateral" value="false" />
+													<h:outputLabel for="keratokonusEyeSightBilateral" value="Bilat." />
+												</div>
+												<div class="prescription-section-field">
+													<h:selectBooleanCheckbox id="keratokonusEyeSightRight" value="false" />
+													<h:outputLabel for="keratokonusEyeSightRight" value="Hö" />
+												</div>
+												<div class="prescription-section-field">
+													<h:selectBooleanCheckbox id="keratokonusEyeSightLeft" value="false" />
+													<h:outputLabel for="keratokonusEyeSightLeft" value="Vä" />
+												</div>
+											</div>
+
+
+											<div class="prescription-section-fieldset">
+												<div class="prescription-section-field">
+													<h:outputLabel for="keratokonusVisualAcuityRight" value="Hö" />
+													<h:inputText id="keratokonusVisualAcuityRight" pt:placeholder="" styleClass="input-very-short" />
+												</div>
+
+												<div class="prescription-section-field">
+													<h:outputLabel for="keratokonusVisualAcuityLeft" value="Vä" />
+													<h:inputText id="keratokonusVisualAcuityLeft" pt:placeholder="" styleClass="input-very-short"  />
+												</div>
+
+												<div class="prescription-section-field">
+													<span>
+														Med glaskorr.
+													</span>
+												</div>
+
+											</div>
+
+
+											<div class="prescription-section-fieldset">
+												<div class="prescription-section-field">
+													<h:selectBooleanCheckbox id="keratokonusNoGlasses" value="false" />
+													<h:outputLabel for="keratokonusNoGlasses" value="Glas kan ej användas" />
+												</div>
+											</div>
+
+										</ui:fragment>
+									</div>
+								</div>
+
+								<div class="prescription-section">
+									<div class="prescription-section-main">
+										<div class="field-element field-element-toggle">
+											<h:selectBooleanCheckbox id="special" value="#{hasSpecial}" />
+											<h:outputLabel for="special" value="Spec / synsvag:" />
+										</div>
+									</div>
+									<div class="prescription-section-fields">
+										<ui:fragment rendered="#{hasSpecial}">
+											<div>
+												<div class="prescription-section-fieldset">
+													<div class="prescription-section-field">
+														<h:selectBooleanCheckbox id="specialWeakEyeSight" value="false" />
+														<h:outputLabel for="specialWeakEyeSight" value="Synsvag" />
+													</div>
+
+													<div class="prescription-section-field">
+														<h:selectBooleanCheckbox id="specialEyeSightBilateral" value="false" />
+														<h:outputLabel for="specialEyeSightBilateral" value="Bilat." />
+													</div>
+													<div class="prescription-section-field">
+														<h:selectBooleanCheckbox id="specialEyeSightRight" value="false" />
+														<h:outputLabel for="specialEyeSightRight" value="Hö" />
+													</div>
+													<div class="prescription-section-field">
+														<h:selectBooleanCheckbox id="specialEyeSightLeft" value="false" />
+														<h:outputLabel for="specialEyeSightLeft" value="Vä" />
+													</div>
+												</div>
+											</div>
+										</ui:fragment>
+									</div>
+								</div>
+
+							</div>
+						</div>
+
+					</h:form>
+				</div>
 
 				<h:form id="form" pt:data-focus="true">
 
